# llvm-message-routing

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.in  LICENSE  generate_checksum.sh  llvm-message-routing.code-workspace
.circleci/: config.yml
common/: CMakeLists.txt
common/include/routing/: .slab_allocator.h.swp  algorithm_util.h  application.h  bits_util.h  blob.h  buffer.h  call_counter.h  config.h  configuration.h  configuration.h.in  debug.h  decimal.h  detect.h  enum_utils.h  fatal_signal_handlers.h  file_util.h  fmt.h  functional.h  hooks.h  id_map.h  idle_strategy.h  instance_container.h  latches.h  logger.h  looping_state.h  matcher.h  meta.h  operation.h  operation_register.h  overload.h  pointer_holder.h  pointer_utils.h  poller.h  poller_providers.h  portability.h  random_utils.h  resource_state.h  ring_buffer.h  slab_allocator.h  sorted_small_array.h  (+17 more)
common/src/: algorithm_util_test.cpp  application.cpp  benchmark.cpp  bits_util_test.cpp  blob.cpp  buffer.cpp  buffer_test.cpp  config.cpp  config_test.cpp  debug_test.cpp  fatal_signal_handlers.cpp  file_util.cpp  functional_test.cpp  hooks.cpp  hooks_test.cpp  instance_container_test.cpp  logger.cpp  looping_state_test.cpp  matcher_test.cpp  operation_register.cpp  operation_register_test.cpp  overload_test.cpp  poller.cpp  poller_providers.cpp  poller_providers_test.cpp  poller_test.cpp  ring_buffer_test.cpp  slab_allocator_test.cpp  sorted_small_array_test.cpp  stacktrace.cpp  stacktrace_printer.cpp  stdext_test.cpp  string_utils.cpp  string_utils_test.cpp  synchronized_test.cpp  tcp_socket.cpp  tcp_socket_test.cpp  tcp_util.cpp  thread_factory.cpp  throttle_test.cpp  (+2 more)
config/: test_application.properties
docker/: llvm-debug  llvm-test  project-config.jam
engine/: .CMakeLists.txt.swp  CMakeLists.txt
engine-client/: CMakeLists.txt
engine-client/src/: main.cpp
engine-protos/: CMakeLists.txt  engine.proto  generate_proto.sh
engine-protos/src/: engine.grpc.pb.cc  engine.grpc.pb.h  engine.pb.cc  engine.pb.h  grpc_options.cpp  grpc_options.h
engine-server/: CMakeLists.txt
engine-server/src/: main.cpp
engine/include/routing/engine/: ClangCC1Args_Linux.h  ClangCC1Args_OSX.h  ClangCC1Driver.h  SimpleOrcJit.h  annotation.h  clang_cc1_driver.h  have_intrinsics.h  message.h  message_key.h  optimizer.h  symbol_export_plugin.h
engine/src/: ClangCC1Driver.cpp  JitFromScratch.cpp  SimpleOrcJit.cpp  available_headers.h  available_headers.in.cpp  base_engine_test.cpp  base_engine_test.h  clang_cc1_driver.cpp  code_transform_test.cpp  external_includes_jit_test.cpp  init_test.cpp  message_test.cpp  optimizer.cpp  orc_jit_test.cpp  router_test.cpp  routing_message_function_test.cpp  symbol_export_plugin.cpp
message/: CMakeLists.txt
message/include/routing/message/: message.h  message_key.h
message/src/: message.cpp  message_benchmark.cpp  message_key_test.cpp  message_test.cpp
pcm-wrapper/: CMakeLists.txt
resources/engine_orc_test_bin/: cpp_functions.cpp  external_includes.cpp  router.cpp  routing_function.cpp  simple_function.cpp
testing/: test_benchmark_main.cpp  test_fpga_main.cpp  test_main.cpp
